Update gradle build