@@ -10,10 +10,14 @@ plugins {
     id "com.gorylenko.gradle-git-properties" version "2.0.0"
     id 'com.google.cloud.tools.jib' version '1.0.1'
     id 'jacoco'
+    id 'org.hidetake.swagger.generator' version '2.18.1'
+    id 'org.unbroken-dome.helm' version '0.4.4'
+    id 'org.unbroken-dome.helm-commands' version '0.4.4'
+    id 'org.unbroken-dome.helm-publish' version '0.4.4'
+    id 'org.unbroken-dome.helm-releases' version '0.4.4'
 }
 
-version "0.1"
-group "com.strapdata.basketapp"
+mainClassName = 'com.strapdata.basketapp.Application'
 
 repositories {
     mavenLocal()
@@ -23,7 +27,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.0.M2'
+        mavenBom 'io.micronaut:micronaut-bom:1.1.2'
     }
 }
 
@@ -73,17 +77,56 @@ dependencies {
     testRuntime "org.junit.jupiter:junit-jupiter-engine"
 
     compile group: 'io.vavr', name: 'vavr', version: '0.9.2'
-    compile(group: 'com.datastax.cassandra', name:'cassandra-driver-core', version: '3.5.1') { exclude group:  'com.google.guava', module: 'guava' }
-    compile(group: 'com.datastax.cassandra', name:'cassandra-driver-mapping', version: '3.5.1') { exclude group:  'com.google.guava', module: 'guava' }
-    compile(group: 'com.datastax.cassandra', name:'cassandra-driver-extras', version: '3.5.1') { exclude group:  'com.google.guava', module: 'guava' }
+    compile(group: 'com.datastax.cassandra', name:'cassandra-driver-core', version: '3.7.1') { exclude group:  'com.google.guava', module: 'guava' }
+    compile(group: 'com.datastax.cassandra', name:'cassandra-driver-mapping', version: '3.7.1') { exclude group:  'com.google.guava', module: 'guava' }
+    compile(group: 'com.datastax.cassandra', name:'cassandra-driver-extras', version: '3.7.1') { exclude group:  'com.google.guava', module: 'guava' }
     compile group: 'org.elasticsearch.client', name:'elasticsearch-rest-high-level-client', version: '6.2.3'
 
-    testCompile(group: 'com.strapdata.elassandraunit', name:'elassandra-unit-spring', version: '3.5.0.2') {
+    testCompile(group: 'com.strapdata.elassandraunit', name:'elassandra-unit-spring', version: '3.7.1.0') {
         exclude group: 'com.strapdata.elassandraunit', module: 'elassandra-unit'
     }
-    testCompile group: 'com.strapdata.elassandraunit', name:'elassandra-unit', version: '3.5.0.2'
+    testCompile group: 'com.strapdata.elassandraunit', name:'elassandra-unit', version: '3.7.1.0'
 
     compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
+}
+
+jib {
+    from {
+        image = 'openjdk:alpine'
+    }
+    to {
+        image = project.image
+        tags = [ project.version, 'latest']
+
+        // osxkeychain does not work on linux and CI environments
+        // credHelper = 'osxkeychain'
+        auth {
+            username = registryUsername
+            password = registryPassword
+        }
+    }
+    container {
+        jvmFlags = ['-Xmx1024m',
+                    '-XX:+UnlockExperimentalVMOptions',
+                    '-XX:+UseCGroupMemoryLimitForHeap',
+                    '-XX:MaxRAMFraction=2',
+                    '-XX:+ExitOnOutOfMemoryError'
+        ]
+        mainClass = 'com.strapdata.basketapp.Application'
+        ports = ['8080']
+        labels = [ description:'Basketapp REST server']
+    }
+}
+
+// generate HELM package: gradlew helmPackageBasketappChart
+helm {
+    charts {
+        basketapp {
+            chartName = 'basketapp'
+            chartVersion = '0.1.0'
+            sourceDir = file('src/main/helm/basketapp')
+        }
+    }
 }
 
 shadowJar {
@@ -106,7 +149,6 @@ run.classpath += configurations.developmentOnly
 test.classpath += configurations.developmentOnly
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
-mainClassName = "com.strapdata.basketapp.Application"
 
 // use JUnit 5 platform
 test {
